fix: fixed bug with forms overlapping, fixed bug with icons rendering

--- a/static/css/allauth_login.css
+++ b/static/css/allauth_login.css
@@ -186,45 +186,43 @@ h2{
     transition: all 0.6s ease-in-out;
 }
 
+
+/* When becoming invisible */
 .sign-in,
 .sign-up {
     position: absolute;
     left: 0;
     width: 50%;
-    transition: opacity 0.5s, transform 0.5s, z-index 0s 0.5s; /* Transition for smooth effect */
+    transition: transform 0.5s, opacity 0.5s; /* disappearance speed */
     will-change: opacity, transform;
 }
-
+/* When becoming visible */
+.container.active .sign-in,
+.container.active .sign-up {
+    opacity: 1;
+    transition: transform 0.5s, opacity 0.5s; /* appearance speed */
+}
+.container .sign-in {
+    transform: translateX(0%);
+    opacity: 1;
+    z-index: 5; /* Keep sign-in on top when it's active */
+}
 .container.active .sign-in {
-    transform: translateX(100%);
+    transform: translateX(75%);
     opacity: 0;
-    z-index: 1;
+    z-index: 1; /* Move sign-in below when it's not active */
 }
-
-.sign-up {
-    transform: translateX(50%);
+.container .sign-up {
+    transform: translateX(25%);
     opacity: 0;
-    z-index: 1;
+    z-index: 1; /* Keep sign-up below when it's not active */
 }
-
 .container.active .sign-up {
     transform: translateX(100%);
     opacity: 1;
-    z-index: 5;
-    transition-delay: 0.2s; /* Apply transition effect immediately */
+    z-index: 5; /* Bring sign-up to top when it's active */
 }
 
-
-@keyframes move {
-    0%, 49.99% {
-        opacity: 0;
-        z-index: 1;
-    }
-    50%, 100% {
-        opacity: 1;
-        z-index: 5;
-    }
-}
 
 .provider-list {
     display: flex;
